--- a/src/styles.css
+++ b/src/styles.css
@@ -7,12 +7,14 @@
 } */
 .App {
     font-family: sans-serif;
-    text-align: center;
+    /* text-align: center; */
     max-width: 1400px;
     margin: 0 auto;
     place-content: center; 
-  display: flex;
+  /* display: flex;
   flex-wrap: wrap;
+  gap: 60px; */
+  display: grid;
   gap: 60px;
 }
 /* @media (max-width: 200px) { */
@@ -50,6 +52,7 @@
 
 .container {
   color: black;
+  /* display: grid; */
   img {
     height: 150px;
     aspect-ratio: 1/1;
@@ -64,7 +67,10 @@
     font-size: 20px;
   }
 }
-.user-list-container {
-  display: grid;
-  gap: 42px;
-}
+
+  .Movie-like-btn{
+    display: flex;
+    align-content: start;
+    gap: 10px;
+    padding: 5px;
+  }
