--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,13 @@
-/* body {
-  background-color: antiquewhite;
+body {
+  /* background-color: antiquewhite;
   min-width: 100vh;
   margin: 0;
   display: grid;
-  place-content: center;
-} */
+  place-content: center; */
+  background-image: url("https://media.istockphoto.com/id/1055722852/vector/abstract-background.jpg?s=612x612&w=0&k=20&c=EPIe1Kalsb-UQp8QQsEsOhyBjcKu6SkCnkk4DMSgMTw=");
+background-size: cover;
+      
+}
  .nav-bar{
   display: flex;
   justify-content: center;
@@ -94,3 +97,20 @@
     gap: 10px;
     padding: 5px; */
   }
+
+
+
+  .movie-content-container {
+  max-width: 60rem;
+}
+:root {
+  /* 1rem = 16px */
+  font-size: 16px;
+}
+.add-movie-form {
+  display: grid;
+  gap: 0.5rem;
+  max-width: 30rem;
+
+  margin: 1.25rem auto;
+}
