--- a/src/styles.css
+++ b/src/styles.css
@@ -107,10 +107,13 @@ background-size: cover;
   /* 1rem = 16px */
   font-size: 16px;
 }
-.add-movie-form {
+.add-movie-form, .edit-movie-form {
   display: grid;
   gap: 0.5rem;
   max-width: 30rem;
-
   margin: 1.25rem auto;
+}
+.like-delete{
+  display: flex;
+  justify-content: space-between;
 }
